# Knot

./: .gitignore  .vscodeignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  IMPLEMENTATION_PLAN.md  LICENSE  PLANNED_FEATURES.md  README.md  RICH_HOVER_PLAN.md  ROADMAP.md  SUPPORTERS.md  Vdoc architecture.md  language-configuration.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  worklog.md
.github/workflows/: ci.yml  early-release.yml  release.yml
client/: build.js  package.json  tsconfig.json  tsconfig.tsbuildinfo
client/src/: extension.ts  logManager.ts  settingsPanel.ts  statusBar.ts  tweegoIntegration.ts
crates/core/: Cargo.toml
crates/core/src/: analysis.rs  analysis_tests.rs  document.rs  editing.rs  graph.rs  lib.rs  passage.rs  virtual_doc.rs  workspace.rs
crates/core/src/css/: mod.rs  parser.rs  types.rs
crates/core/src/oxc/: mod.rs  parser.rs  types.rs
crates/formats/: Cargo.toml
crates/formats/examples/: scope_user_repro.rs
crates/formats/src/: core.rs  core_specials.rs  format_meta.rs  header.rs  integration_tests.rs  lib.rs  plugin.rs  twine_core.rs  types.rs  virtual_doc.rs
crates/formats/src/chapbook/: adapter.rs  mod.rs
crates/formats/src/harlowe/: adapter.rs  mod.rs
crates/formats/src/snowman/: adapter.rs  mod.rs
crates/formats/src/sugarcube/: adapter.rs  ast.rs  blocks.rs  classifier.rs  comments.rs  custom_macros.rs  edge_classify.rs  js_extractor.rs  js_preprocess.rs  js_validate.rs  js_walk.rs  lexer.rs  links.rs  macro_scan.rs  macros.rs  mod.rs  nav_resolve.rs  navigation.rs  parse_pipeline.rs  parser.rs  parsing.rs  passage_build.rs  passage_tree.rs  regexes.rs  registry_populate.rs  special_passages.rs  syntax_detect.rs  tests.rs  token_builder.rs  tokens.rs  validation.rs  var_extract.rs  variable_tree.rs  vars.rs  virtual_doc.rs  virtual_doc_map.rs
crates/formats/src/sugarcube/css/: mod.rs
crates/formats/src/sugarcube/graph/: edge_classify.rs  mod.rs  nav_resolve.rs  passage_build.rs
crates/formats/src/sugarcube/js/: js_annotate.rs  js_preprocess.rs  js_validate.rs  js_walk.rs  mod.rs
crates/formats/src/sugarcube/lsp/: debug_tokens_test.rs  h1_audit_test.rs  mod.rs  pipeline_log.rs  syntax_detect.rs  token_builder.rs
crates/formats/src/sugarcube/macros/: catalog.rs  classifiers.rs  completion_forms.rs  globals.rs  lookup.rs  mod.rs  operators.rs  passages.rs  snippets.rs
crates/formats/src/sugarcube/parser/: comment.rs  core.rs  extraction.rs  link_parser.rs  macro_parser.rs  mod.rs  predicates.rs  tree_builder.rs  variable_scan.rs
crates/formats/src/sugarcube/passage_tree/: mod.rs  walk_encounters.rs  walk_js_check.rs  walk_links.rs  walk_tokens.rs  walk_tokens_augment.rs  walk_translate.rs  walk_validate.rs  walk_vars.rs
crates/formats/src/sugarcube/registries/: custom_macros.rs  function_registry.rs  mod.rs  registry_populate.rs  template_registry.rs  var_extract.rs  variable_tree.rs
crates/formats/src/sugarcube/vars/: mod.rs  property_map.rs  state_registry.rs  variable_diagnostics.rs
crates/formats/src/sugarcube/workspace/: helpers.rs  mod.rs  startup_aliases.rs  user_callables.rs
crates/formats/src/workspace/: helpers.rs  mod.rs  startup_aliases.rs  user_callables.rs
crates/formats/testdata/: _special.twee
crates/knot-core/: Cargo.toml
crates/knot-formats/: Cargo.toml
crates/knot-server/: Cargo.toml
crates/server/: Cargo.toml
crates/server/src/: lib.rs  lsp_ext.rs  main.rs  state.rs
crates/server/src/handlers/: build.rs  call_hierarchy.rs  code_actions.rs  completion.rs  editing.rs  formats.rs  graph.rs  helpers.rs  hover.rs  knot_ext.rs  lifecycle.rs  macros.rs  mod.rs  navigation.rs  passage_diagnostics.rs  profile.rs  semantic.rs  structure.rs  sync.rs  variables.rs  virtual_doc.rs  workspace.rs
crates/server/src/handlers/helpers/: code_actions.rs  compiler.rs  diagnostics.rs  formatting.rs  graph.rs  indexing.rs  mod.rs  navigation.rs  parsing.rs  position.rs  uri.rs
design/: ARCHITECTURE.md  HOOK_SYSTEM.md  PROMISES.md
docs/: 404.html  Macro_contextual_extraction.md  PROSE_AND_PARSER_ISSUES.md  features.html  hover-token-based-plan.md  index.html  links.html  onboarding.html  parser_addition_plan.md  plan.md  socials.html  sponsors.html  token_caching.md  worklog.md
docs/assets/: style.css
extensions/vscode/: .vscodeignore  CHANGELOG.md  CONTRIBUTING.md  File eslint.config.js  LICENSE  README.md  language-configuration-chapbook.json  language-configuration-harlowe.json  language-configuration-snowman.json  language-configuration-sugarcube.json  language-configuration.json  package-lock.json  (+2 more)
scripts/: build.sh  dev.sh  package.sh
server/: build.js  package.json  tsconfig.json  tsconfig.test.json
shared/: enums.ts  index.ts  protocol.ts
syntaxes/: twee-script.tmLanguage.json  twee.tmLanguage.json
(+236 files in other folders)
