[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/formats",
    "crates/server",
]

[workspace.package]
version = "2.0.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/StormByte0/Knot"

[workspace.dependencies]
# LSP
tower-lsp = "0.20"
lsp-types = "0.94"

# Async
tokio = { version = "1", features = ["full"] }

# Graph
petgraph = "0.7"

# Text
ropey = "1.6"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Parsing
logos = "0.15"
regex = "1"
oxc_ast = "0.134"
oxc_allocator = "0.134"
oxc_span = "0.134"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }

# Concurrency
parking_lot = "0.12"

# Testing
insta = "1"
proptest = "1"

# Internal crates
knot-core = { path = "crates/core" }
knot-formats = { path = "crates/formats" }

# Shared across multiple crates
url = { version = "2", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
