[package]
name = "knot-core"
version.workspace = true
edition.workspace = true

[dependencies]
petgraph = { workspace = true }
ropey = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
