[package]
name = "knot-core"
version.workspace = true
edition.workspace = true

[dependencies]
petgraph = { workspace = true }
ropey = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }

# JavaScript parsing via Oxc
oxc_parser = "0.134"
oxc_span = "0.134"
oxc_ast = "0.134"
oxc_allocator = "0.134"
oxc_diagnostics = "0.134"

# CSS parsing — currently unserved. The `css` module exposes stable types
# (`CssToken`, `CssTokenKind`, `CssDiagnostic`, `CssParseOutcome`) and a
# `parse_css()` entry point that returns an empty outcome. A future CSS
# crate will plug in here without changing downstream callers.
