[package]
name = "knot-formats"
version.workspace = true
edition.workspace = true

[dependencies]
knot-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
logos = { workspace = true }
regex = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
