[package]
name = "knot-formats"
version.workspace = true
edition.workspace = true

[dependencies]
knot-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
logos = { workspace = true }
regex = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
oxc_ast = { workspace = true }
oxc_allocator = { workspace = true }
oxc_span = { workspace = true }

[dev-dependencies]
tempfile = "3"
