[package]
name = "knot-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "knot-server"
path = "src/main.rs"

[dependencies]
knot-core = { workspace = true }
knot-formats = { workspace = true }
tower-lsp = { workspace = true }
lsp-types = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
walkdir = "2"
